# SourceCast

./: .gitattributes  .gitignore  README.md  check_integration.ps1  check_quality.ps1  check_runtime.ps1  docker-compose.prod.example.yml  docker-compose.yml  run_backend.bat  run_frontend.bat  run_worker.bat
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  alembic.ini  pyproject.toml  start-web.sh  start-worker.sh  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_ingestion_schema.py  (+3 more)
backend/app/: main.py
backend/tests/: test_app_health.py  test_audio_and_embedding_services.py  test_auth_cookies.py  test_auth_service.py  test_brief_markdown_service.py  test_brief_schemas.py  test_brief_service.py  test_briefs_api.py  test_chat_api.py  test_chat_service.py  test_chunking_service.py  test_citation_service.py  test_compare_api.py  test_comparison_prompt_service.py  test_comparison_service.py  test_db_session.py  test_grounded_answer_service.py  test_ingestion_service.py  test_ingestion_worker.py  test_insight_schemas.py  test_insight_service.py  test_insights_api.py  test_job_api.py  test_job_events.py  test_job_retry_api.py  test_job_service.py  test_job_stream.py  test_llm_provider.py  test_prompt_service.py  test_qa_api.py  test_qdrant_service.py  test_retrieval_service.py  test_security_and_schemas.py  test_source_api.py  test_source_deletion.py  test_source_preview_full.py  test_source_preview_service.py  test_space_service.py  test_streamed_chat_service.py  test_transcription_service.py  (+2 more)
(+119 files in other folders)
